header text alignment fix for mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -126,10 +126,6 @@
         text-align: center;
     }
 
-    .titlebutton {
-        font-size: 75%;
-    }
-
     th.header {
         cursor: pointer;
         display: table-row;
